--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+@font-face {
+  font-family: 'robotoregular';
+  src: local('robotoregular'), url('./fonts/roboto-regular-webfont.ttf') format('truetype');
+  src: local('robotoregular'), url('./fonts/roboto-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'robotoregular', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
